# brandeis-classes

./: LICENSE.txt  README.md  brandeis.py  build.nix  constants.py  course_science.py  meta_scrape.py  pyproject.toml  scrape_courses.py  test_brandeis.py
brandeis_classes/: __init__.py  brandeis.py  constants.py  meta_scrape.py  scrape_courses.py
test/: test_brandeis.py
test-data/: biol_160b_1.html  cosi_199a_1.html  ed_285_1dl.html
