[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "brandeis_classes"
author = "Rebecca Turner"
author-email = "rbt@sent.as"
home-page = "https://github.com/9999years/dotfiles"
classifiers = ["License :: OSI Approved :: MIT License"]

[tool.flit.scripts]
brandeis_scrape_courses = "brandeis_classes:scrape_courses.main"
brandeis_meta_scrape = "brandeis_classes:meta_scrape.main"

